--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.2",
+    "babel-preset-es2015": "^6.24.1",
     "ethers": "^5.5.4",
     "next": "12.1.0",
     "react": "17.0.2",
