--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@mui/material": "^5.4.2",
     "babel-preset-es2015": "^6.24.1",
     "ethers": "^5.5.4",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
