--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ethers": "^5.5.4",
     "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
