--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "svg": "svgr -d pages/assets/icons pages/assets/icons/svgs"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.2",
+    "@svgr/webpack": "^6.2.1",
     "babel-preset-es2015": "^6.24.1",
     "ethers": "^5.5.4",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
+    "react-scroll": "^1.8.6",
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@svgr/cli": "^6.2.1",
     "autoprefixer": "^10.4.2",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.6",
