--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fullpage/react-fullpage": "^0.1.22",
     "@mui/material": "^5.4.2",
     "@svgr/webpack": "^6.2.1",
+    "aos": "^2.3.4",
     "babel-preset-es2015": "^6.24.1",
     "ethers": "^5.5.4",
     "next": "^12.1.0",
