--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scroll": "^1.8.6",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@svgr/cli": "^6.2.1",
