--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "aos": "^2.3.4",
     "babel-preset-es2015": "^6.24.1",
     "ethers": "^5.5.4",
+    "framer-motion": "^6.2.8",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.2.2",
     "react-scroll": "^1.8.6",
     "sass": "^1.49.9",
